src/test/ui/issues/issue-25439.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/issue-25439.rs:8:5
   |
LL |     fix(|_, x| x);
   |     ^^^ ------ found signature defined here
   |     |
   |     expected due to this
   |
   = note: expected closure signature `for<'a> fn(Helper<'a, [closure@$DIR/issue-25439.rs:8:9: 8:15]>, i32) -> _`
              found closure signature `fn(_, _) -> _`
note: required by a bound in `fix`
  --> $DIR/issue-25439.rs:3:33
   |
LL | fn fix<F>(f: F) -> i32 where F: Fn(Helper<F>, i32) -> i32 {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `fix`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
